intTests/test_saw_import/testFailHiding2.log.good
Loading file "testFailHiding2.saw"
testFailHiding2.saw:1:27-1:28: Error: Syntax error: missing name
FAILED
