intTests/test_saw_import/testFailHiding2.saw
import "A.cry" hiding (x1,,x2);
